# eml2pdf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
eml2pdf/: __init__.py  cli.py  html_generator.py  parser.py  pdf_converter.py
