[project]
name = "eml2pdf"
version = "0.1.0"
description = "Parse EML files and export selected headers + body into a single PDF."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "weasyprint>=60.0",
]

[project.scripts]
eml2pdf = "eml2pdf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
